# ThumbyDOOM

./: .gitignore  .gitmodules  PHASE1_NOTES.md  README.md  build_wad.sh
device/: CMakeLists.txt  doom_audio_pwm.c  doom_audio_pwm.h  doom_buttons.c  doom_buttons.h  doom_device_main.c  doom_font.c  doom_font.h  doom_lcd_gc9107.c  doom_lcd_gc9107.h  doom_quit_handoff.c
host/: CMakeLists.txt  host_main.c  pico.h
host/hardware/: clocks.h  dma.h  flash.h  gpio.h  i2c.h  interp.h  irq.h  pwm.h  spi.h  sync.h
host/pico/: audio_i2s.h  divider.h  multicore.h  mutex.h  sem.h  stdlib.h  sync.h  time.h
host/pico/util/: pheap.h
port/: config.h  doom1_whd.S  doom_overlay_menu.c  doom_overlay_menu.h  i_input_thumby.c  i_main_thumby.c  i_picosound.h  i_picosound_thumby.c  i_sound_thumby.c  i_system_thumby.c  i_timer_thumby.c  i_video_thumby.c  opl_thumby.c  pd_stub_thumby.c  picoflash.h  piconet.h  stubs_thumby.c  thumby_hud.c  w_file_thumby.c
tools/: bin2c.py
wads/: .gitignore
